--- a/src/scss/reset.scss
+++ b/src/scss/reset.scss
@@ -1,9 +1,53 @@
-html{
+html,
+body {
+	min-width: 320px;
 	height: 100%;
-	font-family: Helvetica, Tahoma, Arial, STXihei, "华文细黑", "Microsoft YaHei", "微软雅黑", sans-serif;
 }
-body{
-	padding: 0px;
-	margin: 0px;
+
+body {
+  margin: 0;
+  font-family: "STHeiti", "Microsoft YaHei", "Hiragino Sans GB",
+		"WenQuanYi Micro Hei", sans-serif;
+	width: 100%;
 	height: 100%;
+}
+div,
+span {
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+}
+p {
+  margin: 0;
+}
+h2 {
+  margin: 0;
+}
+a {
+  text-decoration: none;
+  outline: none;
+	-webkit-tap-highlight-color: transparent;
+	color: black;
+}
+img {
+  width: 100%;
+  height: 100%;
+}
+blockquote {
+  margin: 0;
+}
+input,
+button {
+  padding: 0;
+  border: 0;
+}
+input,
+button,
+textarea {
+  outline: none;
+  border: none;
+}
+
+// filter
+.filter-active {
+  background: #2bbb8f !important;
 }
