--- a/templates/home.ejs
+++ b/templates/home.ejs
@@ -1,17 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
-	<meta content="yes" name="apple-mobile-web-app-capable"/>
-    <meta content="yes" name="apple-touch-fullscreen"/>
-    <meta content="telephone=no,email=no" name="format-detection"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+	<meta content="yes" name="apple-mobile-web-app-capable" />
+	<meta content="yes" name="apple-touch-fullscreen" />
+	<meta content="telephone=no,email=no" name="format-detection" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<title>研究生求生指南</title>
 </head>
+
 <body>
+	<svg style="display: none;">
+		<symbol id="user">
+			<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+				<g id="课程详情" transform="translate(-311.000000, -35.000000)">
+					<g id="app-bar-bg-copy" transform="translate(0.000000, 24.000000)">
+						<g id="Oval-16-+-Oval-13-Copy-+-Oval-15" transform="translate(312.000000, 12.000000)">
+							<path d="M25.6880254,28.5167372 C24.5820819,22.4699513 20.6639027,18 16,18 C11.304048,18 7.36410369,22.5315953 6.2895743,28.641616"
+							    id="Oval-16" stroke="#666666"></path>
+							<g id="Oval-13-Copy-+-Oval-15">
+								<circle id="Oval-13-Copy" stroke="#CDCDCD" cx="16" cy="16" r="16"></circle>
+								<circle id="Oval-15" stroke="#666666" cx="16" cy="13" r="5"></circle>
+							</g>
+						</g>
+					</g>
+				</g>
+			</g>
+		</symbol>
+		<symbol id="back">
+			<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+				<g id="搜索结果" transform="translate(-18.000000, -35.000000)">
+					<g id="app-bar-bg-copy" transform="translate(0.000000, 24.000000)">
+						<g id="Oval-39-+-Shape" transform="translate(19.000000, 12.000000)">
+							<circle id="Oval-39" stroke="#CDCDCD" cx="16" cy="16" r="16"></circle>
+							<path d="M24,15 L11.8,15 L17.4,9.4 L16,8 L8,16 L16,24 L17.4,22.6 L11.8,17 L24,17 L24,15 L24,15 Z" id="Shape" fill="#CDCDCD"></path>
+						</g>
+					</g>
+				</g>
+			</g>
+		</symbol>
+		<symbol viewBox="0 0 1024 1024" id="username">
+			<path fill="#333333" d="M945.344 1022.912 78.72 1022.912c0 0-108.288-439.04 433.28-439.04C1053.632 583.872 945.344 1022.912 945.344 1022.912L945.344 1022.912zM515.776 537.472c-216.64 0-216.64-322.56-216.64-322.56S299.136 0 515.776 0s216.64 214.912 216.64 214.912S732.352 537.472 515.776 537.472L515.776 537.472z"
+			/>
+		</symbol>
+		<symbol viewBox="0 0 1024 1024" id="password">
+			<path fill="#333333" d="M786.473747 499.700883l-30.56411 0L626.682437 499.700883l-54.160527 0L396.104945 499.700883c-4.507664-7.649214-6.968715-15.877619-6.968715-24.451902L389.13623 304.087717c0-40.498366 54.727439-73.354682 122.257461-73.354682 67.526953 0 122.258485 32.856315 122.258485 73.354682l0 48.903803c0 26.981515 27.362184 48.90278 61.128219 48.90278 33.765011 0 61.128219-21.921265 61.128219-48.90278l0-48.903803c0-94.511537-109.506043-171.160241-244.514923-171.160241-135.055952 0-244.514923 76.648704-244.514923 171.160241l0 195.612143-30.565133 0c-50.67003 0-91.692329 32.856315-91.692329 73.354682l0 268.966824c0 40.498366 41.022299 73.354682 91.692329 73.354682l550.159088 0c50.67003 0 91.693352-32.855292 91.693352-73.354682L878.166075 573.054541C878.167099 532.557198 837.142753 499.700883 786.473747 499.700883zM572.52191 755.579621l0 37.538965c0 26.980491-27.363208 48.90278-61.128219 48.90278-33.763988 0-61.129242-21.922289-61.129242-48.90278l0-37.538965c-36.543288-16.912182-61.128219-48.51904-61.128219-84.718497 0-54.014194 54.727439-97.806583 122.257461-97.806583 67.526953 0 122.258485 43.792389 122.258485 97.806583C633.652176 707.059558 609.066221 738.667439 572.52191 755.579621z"
+			/>
+		</symbol>
+		<symbol viewBox="0 0 1024 1024" id="captcha">
+			<path fill="#333333" d="M863.488 183.232c-8.384 0.32-16.64 0.384-24.704 0.384-211.584 0-304.896-91.648-305.6-92.48l-21.12-21.824-21.248 21.76c-0.832 1.024-92.224 92.544-305.6 92.544-8.064 0-16.256-0.064-24.704-0.384l-29.696-0.96v415.616c0 108.864 38.464 267.648 370.752 389.12L512 990.72l10.368-3.776c332.352-121.472 370.752-280.256 370.752-389.12V182.272l-29.632 0.96z m-384.128 522.24L287.872 534.848l50.816-41.408 101.824 75.52s140.544-146.24 276.352-214.592l19.392 21.952S566.592 517.76 479.36 705.472z"
+			/>
+		</symbol>
+	</svg>
+
 	<div id="app"></div>
 	<% for (var chunk in htmlWebpackPlugin.files.chunks) { %>
-        <script src="<%= htmlWebpackPlugin.files.chunks[chunk].entry %>"></script>
-    <% } %>
+		<script src="<%= htmlWebpackPlugin.files.chunks[chunk].entry %>"></script>
+		<% } %>
 </body>
+
 </html>
